ocp/webhooks/create-route-for-service.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: create-route-for-service
webhooks:
  - name: secroute.rhte-webhooks-demo.svc.cluster.local
    clientConfig:
      url: https://secroute.rhte-webhooks-demo.svc.cluster.local:8080/service/validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNzVENDQVptZ0F3SUJBZ0lVTGVEVkpTcEdKcTVsTksyMmxEZFpnU3ViSW9rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pqRWtNQ0lHQTFVRUF3d2JiM0JsYm5Ob2FXWjBMWE5wWjI1bGNrQXhOVFEwTlRVME1qUTBNQjRYRFRFNQpNRGt5TXpJd016RXdNRm9YRFRJd01Ea3lNakl3TXpFd01Gb3dPREUyTURRR0ExVUVBeE10YzJWamNtOTFkR1V1CmNtaDBaUzEzWldKb2IyOXJjeTFrWlcxdkxuTjJZeTVqYkhWemRHVnlMbXh2WTJGc01Ga3dFd1lIS29aSXpqMEMKQVFZSUtvWkl6ajBEQVFjRFFnQUVHc1d2S2duTzEwU0FXZndqeEJKbjhrNENRbzdtTXlJMWRRTHdNVER0Z2RpMwpYNUdKNjN2bmNK [...]
    rules:
    - operations: ["CREATE", "DELETE"]
      apiGroups: ["*"]
      apiVersions: ["*"]
      resources: ["services"]
      scope: "*"
    failurePolicy: Ignore
