ocp/webhooks/mutate-route-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutate-secroute
  labels:
    app: mutate-secroute
webhooks:
  - name: secroute-mutate.dev.local
    clientConfig:
      url: https://secroute.dev.local:8080/route/mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRRFhiTkpmZnNZZW56QU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NVGt3T1RJd01EZ3pPRE01V2hnUE1qRXhPVEE0TWpjd09ETTRNemxhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU1uYUUvSGV2Z0dQTGlvc1puNFR0aE1OeXpjbUlNak1UZnVJSlNLTHVHT0hhUjZmWm1ZelhUVGgKTkw1aVJSSFZ4clpsdnNZQ3RvNE1mQkdta01RaWJkWGV0OGdXRzJnNFhHQUU4NTJtS2x1TkZaT0gzM2tWek1jYwpkakNSTmlTMytr [...]
    rules:
      - operations: [ "CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["routes"]
    failurePolicy: Ignore
