ocp/webhooks/validate-route-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validate-secroute
  labels:
    app: validate-secroute
webhooks:
  - name: secroute.rhte-demo-webhooks.svc.cluster.local
    clientConfig:
      url: https://secroute.rhte-demo-webhooks.svc.cluster.local:8080/route/validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNzVENDQVptZ0F3SUJBZ0lVQVVzNGtYeVR3NnZSYXJrZzhRc2thbE9TT0tRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pqRWtNQ0lHQTFVRUF3d2JhM1ZpWlMxamMzSXRjMmxuYm1WeVgwQXhOVFk0TXpZek1EazRNQjRYRFRFNQpNRGt5TWpFMk1UTXdNRm9YRFRFNU1UQXhNekE0TWpBd09Gb3dPREUyTURRR0ExVUVBeE10YzJWamNtOTFkR1V1CmNtaDBaUzFrWlcxdkxYZGxZbWh2YjJ0ekxuTjJZeTVqYkhWemRHVnlMbXh2WTJGc01Ga3dFd1lIS29aSXpqMEMKQVFZSUtvWkl6ajBEQVFjRFFnQUVqOWg0WU4wS3hUdjFFTlZNQ1ZjcmxpV1cxUUtQQllrQUxzTm50N1UwakJQbwpqOUlwaHIyUTUx [...]
    rules:
    - operations: [ "CREATE"]
      apiGroups: ["*"]
      apiVersions: ["*"]
      resources: ["routes"]
      scope: "Cluster"
    failurePolicy: Ignore
